Update with Dark Mode, Fixed Moves

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 @import 'tailwindcss';
 
+@custom-variant dark (&:where(.dark, .dark *));
 
 :root {
+  --color-dark: #003049;
+
   line-height: 1.5;
   font-weight: 400;
 
@@ -19,6 +22,10 @@ button:focus{
   outline: 2px solid white;
 }
 
+.dark{
+  background-color: var(--color-dark);
+}
+
 
 .heading1{
   font-family: 'Helvetica';
@@ -30,7 +37,7 @@ button:focus{
   background-color: white;
   color: black;
   font-size: var(--text-5xl);
-  font-weight: bold;
+  font-weight: medium;
   border-radius: var(--radius-md);
   padding-block: calc(var(--spacing));
   padding-inline: calc(var(--spacing) * 5);
@@ -47,7 +54,7 @@ button:focus{
   color: white;
   box-shadow:  1px 5px 2px rgba(0, 0, 0, 0.4);
   font-size: var(--text-5xl);
-  font-weight: bold;
+  font-weight: medium;
   border-radius: var(--radius-md);
   padding-block: calc(var(--spacing));
   padding-inline: calc(var(--spacing) * 5);
@@ -60,11 +67,29 @@ button:focus{
   cursor: pointer;
 }
 
+.retry-text{
+  font-family: 'Poppins', sans-serif;
+}
+
 @media (width < 40rem /* 640px */) {
   .die-button, .held-button{
     font-size: var(--text-2xl);
     padding-inline: calc(var(--spacing) * 3);
   }
+}
+
+@media (width > 640px ) and (width < 768px ) {
+  .heading1{
+    font-size: var(--text-6xl);
+  }
+
+  .heading-text{
+    font-size: var(--text-lg);
+  }
+
+  .countDiv{
+    width: 70%;
+  } 
 }
 
 @media (width > 365px ) and (width < 40rem ) {
